--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>The avalue pass to the URL are below</h1>
+    <h2>This second header</h2>
    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae veniam a accusantium soluta explicabo distinctio <br>
          possimus totam minima nesciunt labore tenetur consectetur at error, magnam quod sed harum atque.
